--- a/config/database.yml
+++ b/config/database.yml
@@ -21,7 +21,10 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: db/test.sqlite3
+  database: potok_test
+  username: first
+  password: asdfg
+  host: localhost
 
 production:
   <<: *default
